Fix background heights to stop them cutting off early

--- a/Infinity Next/Vimyanized Dark Theme/VimyanizedDark.css
+++ b/Infinity Next/Vimyanized Dark Theme/VimyanizedDark.css
@@ -25,7 +25,7 @@ body {
 .page-title, .page-desc  {
   color: #F8F8F8 !important;
 }
-main {
+main, div#page-container {
   background: #000;
   padding: 0;
   height: 100%;
